--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-	"name": "carowilliuum-landing",
+	"name": "carowilliuum",
+	"homepage": "https://carowilliuum.github.io/",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -40,6 +41,5 @@
 	},
 	"devDependencies": {
 		"gh-pages": "^6.3.0"
-	},
-	"homepage": "https://carowilliuum.github.io/"
+	}
 }
